--- a/aivika-experiment-entity.cabal
+++ b/aivika-experiment-entity.cabal
@@ -1,6 +1,6 @@
-name:            aivikasim-experiment-entity
+name:            aivika-experiment-entity
 version:         0.3
-synopsis:        Entities of AivikaSim simulation experiments
+synopsis:        Entities of Aivika simulation experiments
 description:
     It defines the entities of simulation experiments.
     .
@@ -10,7 +10,7 @@ license-file:    LICENSE
 copyright:       (c) 2017. David Sorokin <david.sorokin@gmail.com>
 author:          David Sorokin
 maintainer:      David Sorokin <david.sorokin@gmail.com>
-homepage:        http://www.aivikasoft.com/en/products/aivikasim.html
+homepage:        http://www.aivikasoft.com
 cabal-version:   >= 1.6
 build-type:      Simple
 tested-with:     GHC == 8.0.2
@@ -31,7 +31,7 @@ library
                      deepseq >= 1.1.0.0,
                      binary >= 0.6.4.0,
                      random >= 1.0.0.3,
-                     aivikasim >= 1.0
+                     aivika >= 5.1
 
     extensions:      DeriveGeneric,
                      DeriveDataTypeable
@@ -41,4 +41,4 @@ library
 source-repository head
 
     type:     git
-    location: https://github.com/dsorokin/aivikasim-experiment-entity
+    location: https://github.com/dsorokin/aivika-experiment-entity
